v1.21.6/_sources/Technology/Hardware/Wiring/cable_management.md.txt

# Cable management

Cable management is essential to improved safety, reliability, efficiency, and maintenance. Therefore we recommend the following tips for cable management.

:::{note}
Use `1 Gigabit/s` rated hardware for all Ethernet cables and Ethernet switches connected to the O3R platform.
:::

## Cable type and size

Using the right length and type of cable is an effective way to keep the cables organized.
ifm provides multiple standard cable length: 1, 2, 5, 10 and 15 meters.

The 10 m and 15 m cables are drag chain compatible and should be used when high flex is required.
The drag chain compatible cables should be used with the adapters ifm E3R112.

## IP rating

The cables have an IP rating of `IP54`, which means they are protected against limited ingress of dust and water, but are not completely waterproof.
This IP rating applies to both ends of the cable, meaning that liquid ingress is reduced both at the head connector itself and at the connector to the OVP (VPU) to reduce capillary effects.
The FAKRA connector to the OVP VPU housing is rated at `IP50` - the same as the OVP itself.

It's important to note that while IP54-rated cables offer some level of protection against dust and water, they may not be suitable for use in extremely wet or dusty environments. Please see the respective norms as a part of the cable specification sheets [online](https://www.ifm.com)


## Preventing ground loops

The VPU-camera-head system is tested for international electromagnetic conformance standards and immunity to the effects of surrounding signals and electrostatic discharge. 
Nonetheless, care must be taken in the integration of the system to prevent the formation of ground loops.
 
Ground loops are openings in the ground plane which enable surrounding electrical noise to be coupled into the ground plane. 
A ground loop can be formed with the O3R platform via the connection loop camera - OVP - vehicle - bracket - camera. 
Preventing ground loops contributes to signal integrity throughout the electrical assembly. 
 
For most camera mounting positions on a vehicle, an aluminum or steel bracket is required for heat dissipation. 
When mounted directly to the vehicle chassis, this result can result in an electrical bond. 
The electrical bond formed by the contact between the mounting screws and the mounting bracket can be eliminated by using insulating bushings, ifm E3R200. 
These bushings combined with the insulating exterior coating on the camera heads can electrically isolate the head from its mounting while preserving the thermal bond.
